[package]
name = "surrealitos"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
serde_json = "1.0.93"
serde = { version = "=1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.6", features = ["protocol-ws", "native-tls"] }

[patch.crates-io]
serde = { git = "https://github.com/frederik-uni/serde" }
serde-content = { git = "https://github.com/frederik-uni/serde-content" }
